# LokiAI

./: .env  .gitattributes  BLOCKCHAIN_INTEGRATION_SUMMARY.md  COMPLETE_BLOCKCHAIN_INTEGRATION.md  CONTAINERIZATION_STATUS.md  DOCKER_FIX_GUIDE.md  DOCKER_PRODUCTION_README.md  DOCKER_REBUILD_GUIDE.md  DOCKER_SYSTEM_RUNNING.md  FINAL_BLOCKCHAIN_INTEGRATION_DEMO.md  FINAL_INTEGRATION_TEST.md  FRONTEND_BACKEND_FIX.md  FRONTEND_BLOCKCHAIN_INTEGRATION_COMPLETE.md  PRODUCTION_AGENTS_INTEGRATION.md  PRODUCTION_AGENTS_README.md  PRODUCTION_COMPLETION_SUMMARY.md  QUICK_START_FIX.md  README.md  REAL_BLOCKCHAIN_INTEGRATION_STATUS.md  check-system-status.ps1  check-wallet-balance.js  deploy-real-contracts.js  docker-compose.complete-blockchain.yml  docker-compose.full.yml  docker-compose.hybrid.yml  docker-compose.production-agents.yml  docker-compose.production-blockchain.yml  docker-compose.simple.yml  docker-rebuild-all.bat  docker-rebuild-all.ps1  docker-rebuild-full.bat  docker-rebuild-full.ps1  docker-rebuild-simple.bat  docker-start-production-blockchain.bat  docker-start-production-blockchain.ps1  nginx.complete.conf  package-lock.json  package.json  setup-and-rebuild-fixed.ps1  setup-and-rebuild.bat  (+19 more)
LokiAi/loki/: .env  Cargo.toml
LokiAi/loki/.cargo/: config.toml
LokiAi/loki/loki1/: Cargo.toml
LokiAi/loki/loki1/release_build/release/.fingerprint/actix-rt-73ff5e22d523a96f/: lib-actix_rt  lib-actix_rt.json
LokiAi/loki/loki1/src/: main.rs  simple_main.rs
LokiAi/loki/loki1/src/auth/: mod.rs
LokiAi/loki/loki1/src/handlers/: settings.rs
LokiAi/loki/loki1/src/models/: settings.rs
LokiAi/loki/loki1/temp_build/: .rustc_info.json
LokiAi/loki/simple-backend/: Cargo.toml
LokiAi/loki/src/: main.rs
(+1723 files in other folders)
