[package]
name = "loki"
version = "0.1.0"
edition = "2021"

[dependencies]  
actix-web = "4"  
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"  
tokio = { version = "1", features = ["full"] }  
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros", "migrate" ] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ethers = "2.0"
hex = "0.4"
