[package]
name = "loki1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = { version = "0.15", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ethers = "2.0"
validator = "0.16"
validator_derive = "0.16"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["database"]
database = ["sqlx", "dotenv"]
